fix: align btn-menu with nav btns

--- a/front-end/source/assets/style/layout/_aside.scss
+++ b/front-end/source/assets/style/layout/_aside.scss
@@ -1039,12 +1039,13 @@ aside {
 
 // Button open/close menu sidebar  (for opensource version)
 .aside__panel--nav--btn-menu {
-  width: $aside-panel-nav-width;
+  width: calc($aside-panel-nav-width + $aside-panel-gap);
   margin-bottom: spacer('16');
   margin-left: -0.5em;
 
   a {
     display: flex;
+    justify-content: end;
     font-size: fs('lg');
     padding: spacer('3') spacer('8');
     border-radius: 0 br('full') br('full') 0;
